# genoise

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-ZLIB  README.md
examples/: demo.rs  self_referential_iterator.rs  state_machine.rs  suspend_from.rs
src/: lib.rs  local.rs  sync.rs
tests/: borrow.rs  compiletest.rs  heap.rs  local.rs  main.rs  stack.rs  sync.rs  tidy.rs
tests/misuse/: .gitignore  local-stack-flavor-is-non-send.rs  local-stack-flavor-is-non-send.stderr
