[package]
name = "genoise"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"
authors = ["Benoît CORTIER <bcortier@proton.me>"]
repository = "https://github.com/CBenoit/genoise/"
documentation = "https://docs.rs/genoise"
description = "Minimum viable generators on stable Rust implemented by abusing async/await"
license = "MIT OR Apache-2.0 OR Zlib"
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md", "LICENSE-*"]
keywords = ["generator", "yield", "coroutine", "state-machine", "no-std"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
publish = true
autotests = false # all tests are in `genoise_tests`

[features]
default = ["alloc"]
alloc = []

[lib]
doctest = true
test = false # no unit tests in library, test everything in `genoise_tests`

[[test]]
name = "genoise_tests"
path = "tests/main.rs"
harness = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = true

[[example]]
name = "state_machine"
doc-scrape-examples = true

[[example]]
name = "self_referential_iterator"
doc-scrape-examples = true
